# sgfunction

./: .gitignore  CMakeLists.txt  bench.cpp  inplace_simple_function.hpp  readme.md  test_simple_function.cpp  virt_simple_function.hpp  void_simple_function.hpp
